--- a/style.css
+++ b/style.css
@@ -1,8 +1,38 @@
 .tweet {
-    text-align: center
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    background: #99CCFF;
+    /*border: 1px solid blue;*/
+    padding: 10px;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 2px;
+    height: 40px;
+}
+/*
+.tweet:nth-child(odd) {
+    background: yellow;
+}
+*/
+.tweet_msg {
+    /*display: inline;*/
+    position: relative;
+    text-align: left;
+    font-size: 20px;
+    font-size: 2.5vw;
+    z-index: 2;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
-.tweet_msg, .timestamp {
-    display: inline
+.timestamp {
+    position: absolute;
+    top: -4px;
+    right: 2px;
+    font-size: 60px; 
+    z-index: 1;
+    text-align: right;
+    color: #3399FF;
 }
-
