--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
     text-align: center;
     background: #99CCFF;
     /*border: 1px solid blue;*/
+    border-radius: 15px;
     padding: 10px;
     margin-left: 20%;
     margin-right: 20%;
     margin-bottom: 2px;
     height: 40px;
+    font-family: Helvetica;
 }
 /*
 .tweet:nth-child(odd) {
@@ -29,9 +31,9 @@
 
 .timestamp {
     position: absolute;
-    top: -4px;
-    right: 2px;
-    font-size: 60px; 
+    top: 0px;
+    right: 10px;
+    font-size: 15px; 
     z-index: 1;
     text-align: right;
     color: #3399FF;
