--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 #twittler {
-	margin-left: 20%;
-    margin-right: 20%;
+	margin-left: auto;
+    margin-right: auto;
 	font-family: Helvetica;
-	text-align: center;
-	min-width: 400px;
+	min-width: 300px;
+	max-width: 800px;
 }
 
 #header {
@@ -14,7 +14,19 @@
 	position: relative;
 }
 
+.user {
+	clear: both;
+	float:left; 
+	width: 16%;
+	font-size: 15px;
+	overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .tweet {
+	float: left;
+	min-width: 30%;
+	max-width: 70%;
     position: relative;
     z-index: 1;
     text-align: center;
