--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin-right: auto;
 	font-family: Helvetica;
 	min-width: 300px;
-	max-width: 800px;
+	max-width: 700px;
 }
 
 #header {
@@ -14,10 +14,14 @@
 	position: relative;
 }
 
+.row {
+	display: none;
+}
+
 .user {
 	clear: both;
 	float:left; 
-	width: 16%;
+	width: 20%;
 	font-size: 15px;
 	overflow: hidden;
     text-overflow: ellipsis;
@@ -36,7 +40,6 @@
     padding: 10px;
     margin-bottom: 2px;
     height: 40px;
-	display: none;
 }
 /*
 .tweet:nth-child(odd) {
