--- a/style.css
+++ b/style.css
@@ -1,46 +1,67 @@
+body {
+    margin: 0px;
+}
+
 h1, h2 {
-    display: inline-block;
+    display: inline;
 }
 
 #twittler {
-	margin-left: auto;
+    margin-left: auto;
     margin-right: auto;
-	font-family: Helvetica;
-	min-width: 300px;
-	max-width: 700px;
+    font-family: Helvetica;
+    min-width: 500px;
+    max-width: 700px;
 }
 
 #header {
-	text-align: left;
+    text-align: left;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+#header ul {
+    margin: 10px;
+}
+
+#header li {
+    display: inline;
 }
 
 #tweets {
-	position: relative;
+    clear: both;
+    overflow: hidden;
+    position: relative;
 }
 
 .row {
-	display: none;
+    width: 650px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 10px;
+    overflow: hidden;
+    display: none;
 }
 
 .user {
-	clear: both;
-	float:left; 
-	width: 20%;
-	font-size: 15px;
-	overflow: hidden;
+    clear: both;
+    float:left; 
+    width: 125px;
+    font-size: 15px;
+    overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .tweet {
-	float: left;
-	min-width: 30%;
-	max-width: 70%;
+    float: left;
+    min-width: 200px;
+    max-width: 500px;
     position: relative;
     z-index: 1;
     text-align: center;
     background: #99CCFF;
     /*border: 1px solid blue;*/
-	border-radius: 15px;
+    border-radius: 15px;
     padding: 10px;
     margin-bottom: 2px;
     height: 40px;
@@ -71,4 +92,27 @@ h1, h2 {
     z-index: 1;
     text-align: right;
     color: #3399FF;
+}
+
+.round-button {
+        padding: 7px 14px 7px 14px;
+        background-color: #99CCFF;
+        border-color: #99CCFF;
+        color: black;
+        border-radius: 5px;
+        font-size: .8em;
+        text-decoration: none;
+}
+
+.alignright {
+    float: right;
+}
+
+.alignleft {
+    float: left;
+}
+
+.no-underline {
+    color: inherit;
+    text-decoration: none;
 }
